src/objects/Master_BNF__c.object
<CustomObject>
    <description>Multi opportunity BNF</description>
    <fields>
        <fullName>Accomodation_Amount__c</fullName>
        <inlineHelpText>The value of additional expenses being passed on to customer, usually C&amp;S opportunities. Select by filling in amount to be passed on.</inlineHelpText>
        <label>Accomodation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Addendum_Reasons__c</fullName>
        <inlineHelpText>Used to add additional fees (usually Pass through) once opportunity is &quot;in Hand&quot; in SFDC system. User must clone BNF of original &quot;In Hand&quot; opportunity and check Addendum and fill in appropriate fields for Pass Through, if applicable</inlineHelpText>
        <label>Revised BNF Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Addendum__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Additional Fees</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Change Billing Frequency</fullName>
                </value>
                <value>
                    <fullName>Change in Contract Timing</fullName>
                </value>
                <value>
                    <fullName>Change in Distribution</fullName>
                </value>
                <value>
                    <fullName>Change in Number of Copies</fullName>
                </value>
                <value>
                    <fullName>Change of Address/Contact Person</fullName>
                </value>
                <value>
                    <fullName>Change of Content</fullName>
                </value>
                <value>
                    <fullName>Change PO number</fullName>
                </value>
                <value>
                    <fullName>Change Prices or Discounts (not Price Increase)</fullName>
                </value>
                <value>
                    <fullName>Other- please describe in the comments section</fullName>
                </value>
                <value>
                    <fullName>Pass Thru Expense</fullName>
                </value>
                <value>
                    <fullName>Price Increase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Addendum__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this is an add-on to a previously &quot;In Hand&quot; opportunity where a BNF had been submitted and approved.</inlineHelpText>
        <label>Revised BNF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Billing_Date_Information__c</fullName>
        <inlineHelpText>The date(s) that the bill should be sent. This is a text field that allows for multiple dates and for billing instructions</inlineHelpText>
        <label>Additional Billing Date Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Delivery_Date_Information__c</fullName>
        <inlineHelpText>Text field provide to allow for additional information to be communicated to the Revenue Analyst regarding delivery</inlineHelpText>
        <label>Additional Delivery Date Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BNF_Status__c</fullName>
        <inlineHelpText>Used by the Revenue Analyst to indicate the status of the BNF: New, Submitted, Accepted, Accrual, Cancelled , Rejected , or Completed.</inlineHelpText>
        <label>BNF Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Accrual</fullName>
                </value>
                <value>
                    <fullName>Addendum</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_To_Account_Local__c</fullName>
        <formula>Bill_To_Account__r.NameLocal</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Account (Local)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To: Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Master BNFs (Bill To Account)</relationshipLabel>
        <relationshipName>Master_BNFs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <label>Bill To: Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To: City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Local__c</fullName>
        <formula>Bill_To__r.FirstNameLocal + &quot; &quot; +  Bill_To__r.LastNameLocal</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Contact (Local)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <label>Bill To: Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State_Province__c</fullName>
        <label>Bill To: State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Zip_Postal_Code__c</fullName>
        <label>Bill To: Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Master BNFs</relationshipLabel>
        <relationshipName>Master_BNFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <label>Billing Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EGP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>GTQ</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>LKR</fullName>
                </value>
                <value>
                    <fullName>MAD</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>PKR</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Currency_del__c</fullName>
        <label>Billing Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EGP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>GTQ</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>LKR</fullName>
                </value>
                <value>
                    <fullName>MAD</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>PKR</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carbon_Copy_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carbon Copy: Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Master BNFs (Carbon Copy Account)</relationshipLabel>
        <relationshipName>Master_BNFs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carbon_Copy_Address__c</fullName>
        <label>Carbon Copy: Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Carbon_Copy_City__c</fullName>
        <label>Carbon Copy: City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carbon_Copy_Country__c</fullName>
        <label>Carbon Copy: Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carbon_Copy_State_Province__c</fullName>
        <label>Carbon Copy: State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carbon_Copy_Zip_Postal_Code__c</fullName>
        <label>Carbon Copy: Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carbon_Copy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carbon Copy</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Master BNFs (Carbon Copy)</relationshipLabel>
        <relationshipName>Master_BNFs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_PO_Number__c</fullName>
        <inlineHelpText>Purchase Orders are required by certain clients. Revenue Analyst cannot update Financial system and bill these clients without a client PO number.</inlineHelpText>
        <label>Client PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Master BNFs</relationshipLabel>
        <relationshipName>Master_BNFs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>This field can be utilized to communicate specific client billing issues or requirements to the Revenue Analyst.</inlineHelpText>
        <label>Comments to Revenue Analysts</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single-Period</fullName>
                </value>
                <value>
                    <fullName>Multi-Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Master Agreement</fullName>
                </value>
                <value>
                    <fullName>C&amp;S Master Service Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Value__c</fullName>
        <label>Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cover_Sheet_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cover Sheet: Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Master BNFs (Cover Sheet Account)</relationshipLabel>
        <relationshipName>Master_BNFs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cover_Sheet_Address__c</fullName>
        <label>Cover Sheet: Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cover_Sheet_City__c</fullName>
        <label>Cover Sheet: City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Sheet_Country__c</fullName>
        <label>Cover Sheet: Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Sheet_State_Province__c</fullName>
        <label>Cover Sheet: State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Sheet_Zip_Postal_Code__c</fullName>
        <label>Cover Sheet: Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Sheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cover Sheet</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Master BNFs (Cover Sheet)</relationshipLabel>
        <relationshipName>Master_BNFs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Debug__c</fullName>
        <label>Debug</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <inlineHelpText>Date the data/project will be delivered.</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>US Only: Description of Retainer or info for Rev Analyst relating to Retainer.</inlineHelpText>
        <label>Description:</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fair_Value_Type__c</fullName>
        <description>This field is a required field in which the user selects one of the options presented: Stand Alone, MEA with one-off or MEA without one-off. Stand Alone - Sold separately for cash and has value to the client without other services or deliverables.  Meaning it is not purchased as part of another deliverable and its functionality is not dependent on any other IMS services. Multiple Element Arrangement (MEA) - Contracts that involve the delivery or performance of more than one product or service, including those combining historical/back-data with ongoing deliverables</description>
        <label>Fair Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stand Alone</fullName>
                </value>
                <value>
                    <fullName>MEA - with one off</fullName>
                </value>
                <value>
                    <fullName>MEA - without one off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hono__c</fullName>
        <inlineHelpText>The value of additional expenses being passed on to customer, usually C&amp;S opportunities. Select by filling in amount to be passed on.</inlineHelpText>
        <label>Honoraria Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMS_Sales_Org__c</fullName>
        <label>IMS Sales/Billing Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AboutPharma S.r.l.</fullName>
                </value>
                <value>
                    <fullName>Acceletra</fullName>
                </value>
                <value>
                    <fullName>Battaerd Mansley Pty Ltd</fullName>
                </value>
                <value>
                    <fullName>Cambridge Pharma UK</fullName>
                </value>
                <value>
                    <fullName>Cambridge Pharma US</fullName>
                </value>
                <value>
                    <fullName>CORE Center</fullName>
                </value>
                <value>
                    <fullName>CORE Holding</fullName>
                </value>
                <value>
                    <fullName>Data Niche Associates</fullName>
                </value>
                <value>
                    <fullName>Fourth Hurdle</fullName>
                </value>
                <value>
                    <fullName>Health Benchmarks, Inc.</fullName>
                </value>
                <value>
                    <fullName>Health Outcomes Research</fullName>
                </value>
                <value>
                    <fullName>HEDM Belgium</fullName>
                </value>
                <value>
                    <fullName>IHA, IMS Health Hergiswil</fullName>
                </value>
                <value>
                    <fullName>IMS AG Switzerland</fullName>
                </value>
                <value>
                    <fullName>IMS Argentina</fullName>
                </value>
                <value>
                    <fullName>IMS Argentina Pharma</fullName>
                </value>
                <value>
                    <fullName>IMS Austria</fullName>
                </value>
                <value>
                    <fullName>IMS Belgium</fullName>
                </value>
                <value>
                    <fullName>IMS Bolivia</fullName>
                </value>
                <value>
                    <fullName>IMS Brazil</fullName>
                </value>
                <value>
                    <fullName>IMS Chile</fullName>
                </value>
                <value>
                    <fullName>IMS Chile Capacitaciones</fullName>
                </value>
                <value>
                    <fullName>IMS Chille Operaciones Centralizadas</fullName>
                </value>
                <value>
                    <fullName>IMS ChinaMetrik - Hong Kong - HK01</fullName>
                </value>
                <value>
                    <fullName>IMS Colombia</fullName>
                </value>
                <value>
                    <fullName>IMS Ecuador</fullName>
                </value>
                <value>
                    <fullName>IMS France</fullName>
                </value>
                <value>
                    <fullName>IMS Germany</fullName>
                </value>
                <value>
                    <fullName>IMS Guatemala</fullName>
                </value>
                <value>
                    <fullName>IMSH Consult. Sp. z o.o.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Default_Day__c</fullName>
        <label>Invoice Default Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Description__c</fullName>
        <inlineHelpText>Client oriented project name that should appear on invoice to client.</inlineHelpText>
        <label>Invoice Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Opportunity</fullName>
                    <default>true</default>
                    <label>One Opportunity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_retainer_downpayment__c</fullName>
        <inlineHelpText>This is a BNF for retainers/down payment; Individual retainer records are created against this one when purchases are made.</inlineHelpText>
        <label>Is this a retainer/down payment?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_BNF_Type__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master BNF Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Code__c</fullName>
        <label>SAP Base Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0000-Default Payment Terms of Customer Master Data</fullName>
                    <default>true</default>
                    <label>0000-Default Payment Terms of Customer Master Data</label>
                </value>
                <value>
                    <fullName>0001-Payable immediately Due net</fullName>
                </value>
                <value>
                    <fullName>ZA00-Payable within 30 days</fullName>
                </value>
                <value>
                    <fullName>ZB00-Payable immediately Due net</fullName>
                </value>
                <value>
                    <fullName>ZB03-Within 21 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB05-payable within 5 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB07-payable within 7 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB10-payable within 10 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB14-payable within 14 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB15-payable within 15 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB20-payable within 20 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB21-payable within 21 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB30-Payable within 30 days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>ZB45-payable within 45 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB50-Payable within 50 days due net</fullName>
                </value>
                <value>
                    <fullName>ZB60-payable within 60 days due net</fullName>
                </value>
                <value>
                    <fullName>ZB90-Within 90 Days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB97-payable immediately upon receipt</fullName>
                </value>
                <value>
                    <fullName>ZBD4-payment due 30 days after invoice date</fullName>
                </value>
                <value>
                    <fullName>ZBD5-1.5 % discount within 10 days</fullName>
                </value>
                <value>
                    <fullName>ZBFR-Payment terms France</fullName>
                </value>
                <value>
                    <fullName>ZBMA-Payment terms Morocco</fullName>
                </value>
                <value>
                    <fullName>ZBTN-Payment terms Tunesia</fullName>
                </value>
                <value>
                    <fullName>ZGR5-Other</fullName>
                </value>
                <value>
                    <fullName>ZJ06-Term 30 Days From Date of Invoice</fullName>
                </value>
                <value>
                    <fullName>ZJ08-Term 60 Days From Date of Invoice</fullName>
                </value>
                <value>
                    <fullName>ZJ09-Term End of 2nd Month Based on Date of Invoice</fullName>
                </value>
                <value>
                    <fullName>ZJ45-Term 45 Days From Date of Invoice</fullName>
                </value>
                <value>
                    <fullName>ZM90-Before End in 3 months Due net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_Shop__c</fullName>
        <inlineHelpText>US Only: Select yes if the materials for the delivery to the client require the IMS print shop.</inlineHelpText>
        <label>Print Shop</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retainer_Data_Value__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Some clients purchase data on retainer, meaning that instead of purchasing specific data, they pay a specific amount to IMS that will be applied to future data requests. If this is such a request, indicate the amount to be placed on retainer.</inlineHelpText>
        <label>Retainer/Down Payment Data Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Analyst_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Analyst User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Master_BNFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Analyst</label>
        <referenceTo>Revenue_Analyst__c</referenceTo>
        <relationshipLabel>Master BNFs</relationshipLabel>
        <relationshipName>Master_BNFs</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>